# glfwosmesa

./: .gitignore  CMakeLists.txt  README.md
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  triangle
examples/: gears.c  keyboard.c  mouse.c  nanort_viewer.cpp  triangle.c
glfw-patches/: 0001-Add-glfwBlitPixelBuffer.patch  0002-Add-glfwBlitPixelBuffer-platform-pattern.patch  README.md
glfw/include/GLFW/: glfw3.h
glfw/src/: CMakeLists.txt  blit.c
include/: glfw_osmesa.h
src/: glfw_osmesa.c
